<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="26dp"
    android:background="@drawable/bluesh"
    tools:context=".AccountSettings">

    <!-- Home Button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/home"
            android:id="@+id/home"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/home" />
    </RelativeLayout>

    <!-- Title -->
    <TextView
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/stylish_text"
        android:text="@string/AccountSettings"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <!-- Settings Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="25dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="30dp"
            android:text="@string/FriendNotifications" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_mode"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"
            android:text="@string/mode" />
        <TextView
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginBottom="10dp" />


        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DeleteAccount"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>
