<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/sign"
        style="@style/SloganStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="95dp"
        android:fontFamily="serif"
        android:text="@string/signin"
        android:textColor="@color/blue"
        android:textSize="60sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/background"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/background"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnsignin" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup" />

    <LinearLayout
        android:id="@+id/signinwithgoogle"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:background="@drawable/black_border"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="70dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border"
            android:padding="5dp">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:src="@drawable/img" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/google"
            android:textSize="20sp" />
    </LinearLayout>

    </LinearLayout>

</LinearLayout>
