<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".Profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/stylish_text"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:gravity="center" />
        <ImageView
            android:id="@+id/homes"
            android:src="@drawable/notifications"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_image"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/profile"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="25dp"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/usernametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/stylish_text"
            android:text="@string/user"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
        android:id="@+id/username"
            android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:text="johndoe"
        android:textSize="20sp"
        android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/stylish_text"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:layout_gravity="start"/>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="25dp"
            android:text="john.doe@example.com"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationsEnabled"
            android:textSize="20sp"

            android:paddingLeft="25dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="start"/>



    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/warning"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/changeprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeprofile"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:backgroundTint="@color/purple"/>
    </LinearLayout>
</LinearLayout>
