<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:scaleType="center"
            android:src="@drawable/back" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stylish_text"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/home"
            android:src="@drawable/notifications"
            android:layout_width="45dp"
            android:layout_height="45dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="150dp"
        android:background="@drawable/linesborder">

        <ImageView
            android:id="@+id/profileim"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:contentDescription="Left Image"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilename"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stylish_text"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/profile"
                android:textColor="#000"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="15dp"
        android:background="@drawable/linesborder"
        android:layout_marginBottom="5dp"
        android:text="@string/FriendNotifications" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:visibility="gone"
        android:background="@drawable/linesborder"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:text="@string/mode" />

    <LinearLayout
        android:id="@+id/aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/linesborder"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aboutus"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:paddingStart="16dp" />

        <ImageView
            android:id="@+id/aboutuspath"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/right"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/linesborder"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/selecttheimage"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/wallpaper"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/right"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />

        <ImageView
            android:id="@+id/wallpapers"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/right"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/linesborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:padding="15dp"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/logoutpic"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/logoutpic" />

    </LinearLayout>

    <!-- Delete Account Button -->
    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/DeleteAccount"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>