<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="26dp"
        android:background="@color/white">


        <!-- Header Section -->
        <LinearLayout
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Back Button -->

            <!-- Settings Text -->
            <ImageView
                android:id="@+id/back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/stylish_text"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                android:gravity="center" />

            <!-- Home Button (Rightmost) -->
            <ImageView
                android:id="@+id/home"
                android:src="@drawable/notifications"
                android:layout_width="45dp"
                android:layout_height="45dp"/>
        </LinearLayout>

        <!-- Profile Section -->
        <LinearLayout
            android:layout_marginTop="25dp"
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/linesborder"
            android:padding="22dp">

            <ImageView
                android:id="@+id/profileim"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="Left Image"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profilename"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/stylish_text"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/profile"
                    android:textColor="#000"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- Arrow Icon (Right) -->
            <ImageView
                android:id="@+id/arrowIcon"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_marginTop="25dp"
                android:contentDescription="Arrow Icon"
                android:src="@drawable/right" />
        </LinearLayout>

        <!-- Switches -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="22dp"
            android:background="@drawable/linesborder"
            android:layout_marginBottom="5dp"
            android:text="@string/FriendNotifications" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:background="@drawable/linesborder"
            android:padding="22dp"
            android:text="@string/mode"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/linesborder"
            android:orientation="horizontal"
            android:padding="22dp"
            android:gravity="center">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aboutus"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:paddingStart="16dp" />

        <ImageView
            android:id="@+id/aboutuspath"
            android:layout_width="24dp"
            android:layout_height="44dp"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/right"
            android:layout_gravity="end"
        android:layout_marginEnd="16dp" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/backgroundimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/linesborder"
            android:orientation="horizontal"
            android:padding="22dp"
            android:gravity="center">
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selecttheimage"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:textSize="25sp"
                android:paddingStart="16dp" />
            <ImageView
                android:id="@+id/wallpaper"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:contentDescription="Arrow Icon"
                android:src="@drawable/right"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp" />

            <ImageView
                android:id="@+id/wallpapers"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:contentDescription="Arrow Icon"
                android:src="@drawable/right"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp" />
        </LinearLayout>



    <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:orientation="horizontal"
            android:background="@drawable/linesborder">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/logoutpic"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:contentDescription="Arrow Icon"
                android:src="@drawable/logoutpic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="20sp"
                android:padding="22dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Delete Account Button -->
        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DeleteAccount"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
