<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".frist">

    <TextView
        android:id="@+id/welcome"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="38sp"
        android:fontFamily="@font/stylish_text"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logoes"
        android:contentDescription="App Logo"
        android:layout_marginBottom="20dp"/>

    <!-- App Name -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="@font/stylish_text"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <!-- Slogan -->
    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"/>

    <!-- Get Started Button -->
    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Started"
        android:padding="10dp"
        android:backgroundTint="@color/purple"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginBottom="10dp"/>

    <!-- Already have an account? -->
    <TextView
        android:id="@+id/Signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account? Sign in"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>